# refmail

./: .gitignore  Cargo.toml
src/: config.rs  main.rs  types.rs
src/sections/: conference_talk.rs  hackathon.rs  mod.rs
src/templates/: conference_talk.template  mod.rs
