[package]
name = "refmail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.62", features = ["backtrace"] }
chrono = { version = "0.4.22", default-features = false, features = ["std", "serde"] }
dotenv = "0.15.0"
num-traits = "0.2.15"
pretty_assertions = "1.2.1"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.10"
tera = "1.17.0"
url = { version = "2.2.2", features = ["serde"] }

[dev-dependencies]
test-case = "2.2.1"
pretty_assertions = "1.2.1"

[[bin]]
name = "call"
path = "bin/call.rs"
